# soa_projects

./: README.md
rest/: README.md  pyproject.toml
rest/api/: main.py
rest/api/models/: product.py
rest/api/utils/: docs.py
soap/: README.md  client.py  pyproject.toml  server.py
