[tool.poetry]
name = "rest"
version = "0.1.0"
description = ""
authors = ["naanadr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
