[tool.poetry]
name = "soap"
version = "0.1.0"
description = ""
authors = ["naanadr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
spyne = "^2.13.16"
zeep = "^4.1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
